@@ -49,6 +49,8 @@ public:
     virtual ~VAbstractCurve() Q_DECL_OVERRIDE;
 
     virtual QVector<QPointF> GetPoints() const =0;
+    static QVector<QPointF>  GetSegmentPoints(const QVector<QPointF> &points, const QPointF &begin, const QPointF &end,
+                                              bool reverse = false);
     QVector<QPointF>         GetSegmentPoints(const QPointF &begin, const QPointF &end, bool reverse = false) const;
 
     virtual QPainterPath     GetPath(PathDirection direction = PathDirection::Hide) const;
