@@ -92,7 +92,7 @@ private:
     QSharedDataPointer<VGObjectData> d;
 
     static bool    IsPointOnLineviaPDP(const QPointF &t, const QPointF &p1, const QPointF &p2);
-    static double  PerpDotProduct(const QPointF &t, const QPointF &p1, const QPointF &p2);
+    static double  PerpDotProduct(const QPointF &p1, const QPointF &p2, const QPointF &t);
     static double  GetEpsilon(const QPointF &p1, const QPointF &p2);
 
     static int     PointInCircle (const QPointF &p, const QPointF &center, qreal radius);
